    distribution. However, in the presence of boundary 0/1 observations, there
    is now support for two alternatives: "cbeta4" = censored constrained
    four-parameter beta distribution which requires specification of a fixed
    "nu" parameter. "cbetax" = censored exponential mixture beta distribution
    which allows for estimation of "nu".

  o Bug fix in pseudo.r.squared computation for weighted models where previously
    the weights were erroneously ignored (reported by Ray Tayek).

  o Bug fixes in betatree(): Split points were computed incorrectly due to wrong
    sign of the log-likelihood (reported by Se-Wan Jeong). And trees with only
    intercepts for both "mu" and "phi" could not be fitted (reported by Ludwig
    Hothorn).


Changes in Version 3.1-4

  o In betatree() the "xlevels" attribute from partykit::mob is now correctly
    stored in $levels (rather than $xlevels) of the returned object.


Changes in Version 3.1-3

  o Added "IGNORE_RDIFF" flags in some examples in order to avoid showing
    diffs due to small numeric deviations in some checks (especially on CRAN).


Changes in Version 3.1-2

  o Added suppressWarnings(RNGversion("3.5.0")) in those places where set.seed()
    was used to assure exactly reproducible results from R 3.6.0 onwards.


Changes in Version 3.1-1

  o Conditional registration of sctest() method for "betatree" objects when
    "strucchange" package is loaded.


Changes in Version 3.1-0

  o The betatree() function now uses the new mob() implementation from the
    "partykit" package (instead of the old "party" package). The user interface
    essentially remained the same but now many more options are available through
    the new mob() function. The returned model object is now inheriting from
    "modelparty"/"party".

  o Included "grDevices" in Imports.
  
  o Fixed model.frame() method for "betareg" objects which do not store the
    model frame in $model.
